--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,91 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Cabin&display=swap");
+
+:root {
+  --text-color: rgba(0, 0, 0, 0.7);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+  background-color: #fefefe;
+  color: var(--text-color);
+  font-family: "Cabin", sans-serif;
+  /* filter: invert(1) hue-rotate(180deg); */
+}
+
+.otpBox {
+  min-width: 35rem;
+  min-height: 20rem;
+  border-radius: 10px;
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.3);
+}
+
+.center {
+  text-align: center;
+}
+
+.header {
+  padding: 10px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+}
+
+.info {
+  color: rgba(0, 0, 0, 0.3);
+  margin: 1rem 0;
+}
+
+.otpContainer {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  padding: 0 2rem;
+  padding-top: 25px;
+}
+
+.otpContainer input {
+  width: 40px;
+  border: none;
+  outline: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.9);
+  text-align: center;
+  padding-bottom: 5px;
+  font-size: 1.5rem;
+}
+
+.btnContainer {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 2rem;
+}
+
+.btnContainer input {
+  background-color: transparent;
+  color: blue;
+  border: none;
+  outline: none;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.verifyBtn {
+  border: none;
+  outline: none;
+  background-color: rgb(108, 181, 139);
+  color: #fff;
+  padding: 1rem;
+  border-radius: 20px;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.verifyBtn:hover {
+  background-color: rgb(108, 181, 139, 0.8);
 }
